<resources>
    <string name="app_name">掌上医生</string>
    <string name="welcome">欢迎来到掌上医生</string>
    <string name="tvUserName">用户名：</string>
    <string name="tvPassword">密码：</string>
    <string name="btLoad">登陆</string>
    <string name="logo">logo</string>
    <string name="btRegiste">注册</string>
    <string name="eTUserHint">请输入手机号</string>
    <string name="eTPassHint">请输入密码</string>
    <string name="etVerCode">请输入验证码</string>
    <string name="btGetVerCode">获取验证码</string>
    <string name="othWays">-------其他登陆方式-------</string>
    <string name="messageLoad">短信验证码登陆</string>
    <string name="listen">听诊</string>
    <string name="pulse">把脉</string>
    <string name="footTte">足检</string>
    <string name="personal">个人</string>
    <string name="first">第一个</string>
    <string name="sectond">第二个</string>
    <string name="third">第三个</string>
    <string name="four">第四个</string>
    <string name="photograph">拍摄照片</string>
    <string name="getFromCame">从相册中选取</string>
    <string name="MedRecords">就诊记录</string>
    <string name="meaTotalSink">测量总汇</string>
    <string name="Authentication">身份验证</string>
    <string name="Help">帮助与反馈</string>
    <string name="AboutUs">关于我们</string>
    <string name="Portrait">头像</string>
    <string name="Setting">设置</string>
    <string name="setFront">字体大小：</string>
    <string name="FontStyle">字体格式：</string>
    <string name="setTheme">主题设置：</string>
    <string name="MesHint">消息提示</string>
    <string name="ExchangeUser">切换账号</string>
    <string name="SignOut">退出账号</string>
    <string name="NoContent">暂无内容</string>
    <string name="modifyInfo">个人信息</string>
    <string name="sex">性别</string>
    <string name="dateOfBirth">出生年月</string>
    <string name="locationOfBirth">出生地</string>
    <string name="Height">身高(厘米)</string>
    <string name="Weight">体重(千克)</string>
    <string name="ModifySecret">修改密码</string>
    <string name="NickName">昵称</string>
    <string name="CurrentSecret">请输入当前密码</string>
    <string name="NewSecret">请输入新密码</string>
    <string name="NewSecretAgain">请再次输入新密码</string>
    <string name="dataExample">xx年xx月xx日</string>
    <string name="HeightExample">xxx厘米</string>
    <string name="WeightExample">xxx千克</string>
    <string name="Save">保存</string>
    <string name="IamDoctor">我是医生</string>
    <string name="IamPatient">我是患者</string>
    <string name="Name">姓名：</string>
    <string name="UploadQualification">上传从业资格证</string>
    <string name="DocumentType">证件类型：</string>
    <string name="DocumentNum">证件号：</string>
    <string name="Vertify">验证</string>
    <string name="Introduction1">\t\t掌上医生APP是北京林业大学学生</string>
    <string name="Introduction2">小组提出的构思，参加的面向全国的互</string>
    <string name="Introduction3">联网+类比赛项目，并且该项目已经</string>
    <string name="Introduction4">获得老师和投资商的认可。</string>
    <string name="Introduction5">\t\t由北林与其他学校学生共同完成掌</string>
    <string name="Introduction6">上医生APP的开发</string>
    <string name="Email">我们的邮箱：2592879772@qq.com</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="sugarStandard">空腹全血血糖:3.9～6.1毫摩/升</string>
    <string name="Message">消息</string>
</resources>

