<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.v4.view.ViewPager
        android:id="@+id/image_slide_page"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ent_btlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/forestgreen"
            android:text="@string/btLoad"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ent_btregist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:textColor="@color/white"
            android:background="@color/darkcyan"
            android:text="@string/btRegiste"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/othWays"
        android:textColor="@color/black" />
</LinearLayout>