<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/phone"/>
        <EditText
            android:id="@+id/regist_eTPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/eTUserHint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/vercode"/>
        <EditText
            android:id="@+id/regist_eTVerCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/etVerCode"/>

        <Button
            android:id="@+id/regist_btGetVerCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btGetVerCode" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@drawable/password">

        </ImageView>
        <EditText
            android:id="@+id/regist_eTPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/eTPassHint"/>
        <ImageView
            android:id="@+id/image_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ImageClick"
            android:background="@drawable/eye"/>
        <ImageView
            android:id="@+id/image_eye1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/eye1"
            android:visibility="gone"/>
    </LinearLayout>
    <Button
        android:id="@+id/regist_bTRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="20dp"
        android:background="@drawable/button"
        android:text="@string/btRegiste"
        />
</LinearLayout>